well-i-api/whereis
> brew uninstall herokuç
     ^^^^^^^^^

SyntaxError: Unexpected identifier

> > 